- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.4.0
- 
    iOS 8
- 
        b55f1e4f9e0ec9c1a4768352efe48bb2218a4a7e
If WebView is inside other item that x or y position is changed in propertyanimation it won't affect to WebView as it should like other QML Items. Testable by attached example
- relates to
- 
                    QTBUG-42538 Android: text selection handles below other controls -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-43538 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 104211,7 | WIP: Add geometry probes to the QQuickViewController | dev | qt/qtwebview | Status: ABANDONED | -2 | 0 | 
| 109014,6 | Add item change listener | 5.5 | qt/qtwebview | Status: MERGED | -2 | 0 |