Add item change listener

The view controller item (QQuickViewController) didn't not update its
geometry when the geometry of a parent item changed. With this change,
geometry changes will be monitored by adding an item change listener to
all ancestor of the view item. The item change listener will then notify
the view controller when a ancestors geometry changes, by calling
polish().

Task-number: QTBUG-43538
Change-Id: Ia83262254f37291b8ac10ee6c20cb4d57fa06fe2
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>