src/webview/qquickviewcontroller.cpp
@@ -41,9 +41,119 @@
 #include <QtQuick/QQuickWindow>
 #include <QtCore/QDebug>
 
+#include <QtQuick/private/qquickitem_p.h>
+#include <QtQuick/private/qquickitemchangelistener_p.h>
+
+static const QQuickItemPrivate::ChangeTypes changeMask = QQuickItemPrivate::Geometry
+                                                         | QQuickItemPrivate::Children
+                                                         | QQuickItemPrivate::Parent;
+
+class QQuickViewChangeListener : public QQuickItemChangeListener
+{
+public:
+    explicit QQuickViewChangeListener(QQuickViewController *item);
+    ~QQuickViewChangeListener();
+
+    inline void itemGeometryChanged(QQuickItem *,
+                                    const QRectF &,
+                                    const QRectF &) Q_DECL_OVERRIDE;
+    void itemChildRemoved(QQuickItem *item, QQuickItem *child) Q_DECL_OVERRIDE;
+    void itemParentChanged(QQuickItem *item, QQuickItem *parent) Q_DECL_OVERRIDE;
+
+private:
+    Q_DISABLE_COPY(QQuickViewChangeListener)
+    QQuickViewController *m_item;
+    void addAncestorListeners(QQuickItem *item, QQuickItemPrivate::ChangeTypes changeType);
+    void removeAncestorLiseners(QQuickItem *item, QQuickItemPrivate::ChangeTypes changeType);
+    bool isAncestor(QQuickItem *item);
+};
+
+QQuickViewChangeListener::QQuickViewChangeListener(QQuickViewController *item)
+    : m_item(item)
+{
+    // Only listen for parent changes on the view controller item.
+    QQuickItemPrivate::get(item)->addItemChangeListener(this, QQuickItemPrivate::Parent);
+    // Listen to all changes, that are relevant, on all ancestors.
+    addAncestorListeners(item->parentItem(), changeMask);
+}
+
+QQuickViewChangeListener::~QQuickViewChangeListener()
+{
+    if (m_item == 0)
+        return;
+
+    removeAncestorLiseners(m_item->parentItem(), changeMask);
+}
+
+void QQuickViewChangeListener::itemGeometryChanged(QQuickItem *, const QRectF &, const QRectF &)
+{
+    m_item->polish();
+}
+
+void QQuickViewChangeListener::itemChildRemoved(QQuickItem *item, QQuickItem *child)
+{
+    Q_ASSERT(item != m_item);
+
+    const bool ancestor = isAncestor(child);
+
+    // if the child isn't an ancestor of the view item, then we don't care.
+    if (!ancestor)
+        return;
+
+    // Remove any listener we attached to the child and its ancestors.
+    removeAncestorLiseners(child, changeMask);
+}
+
+void QQuickViewChangeListener::itemParentChanged(QQuickItem */*item*/, QQuickItem *newParent)
+{
+    // Adds this as a listener for newParent and its ancestors.
+    addAncestorListeners(newParent, changeMask);
+}
+
+void QQuickViewChangeListener::addAncestorListeners(QQuickItem *item,
+                                                    QQuickItemPrivate::ChangeTypes changeType)
+{
+    QQuickItem *p = item;
+    while (p != 0) {
+        QQuickItemPrivate::get(p)->addItemChangeListener(this, changeType);
+        p = p->parentItem();
+    }
+}
+
+void QQuickViewChangeListener::removeAncestorLiseners(QQuickItem *item,
+                                                      QQuickItemPrivate::ChangeTypes changeType)
+{
+    QQuickItem *p = item;
+    while (p != 0) {
+        QQuickItemPrivate::get(p)->removeItemChangeListener(this, changeType);
+        p = p->parentItem();
+    }
+}
+
+bool QQuickViewChangeListener::isAncestor(QQuickItem *item)
+{
+    Q_ASSERT(item != 0);
+    Q_ASSERT(m_item != 0);
+
+    QQuickItem *p = m_item->parentItem();
+    while (p != 0) {
+        if (p == item)
+            return true;
+        p = p->parentItem();
+    }
+
+    return false;
+}
+
+///
+/// \brief QQuickViewController::QQuickViewController
+/// \param parent
+///
+
 QQuickViewController::QQuickViewController(QQuickItem *parent)
     : QQuickItem(parent)
     , m_view(0)
+    , m_changeListener(new QQuickViewChangeListener(this))
 {
     connect(this, &QQuickViewController::windowChanged, this, &QQuickViewController::onWindowChanged);
     connect(this, &QQuickViewController::visibleChanged, this, &QQuickViewController::onVisibleChanged);
@@ -58,6 +168,14 @@ void QQuickViewController::componentComplete()
    QQuickItem::componentComplete();
    m_view->init();
    m_view->setVisibility(QWindow::Windowed);
+}
+
+void QQuickViewController::updatePolish()
+{
+    if (m_view == 0)
+        return;
+
+    m_view->setGeometry(mapRectToScene(clipRect()).toRect());
 }
 
 void QQuickViewController::setView(QNativeViewController *view)
