src/webview/qquickviewcontroller_p.h
@@ -56,6 +56,7 @@
 QT_BEGIN_NAMESPACE
 
 class QNativeViewController;
+class QQuickViewChangeListener;
 
 class Q_WEBVIEW_EXPORT QQuickViewController : public QQuickItem
 {
@@ -72,11 +73,13 @@ public slots:
 
 protected:
     void componentComplete() Q_DECL_OVERRIDE;
+    void updatePolish() Q_DECL_OVERRIDE;
     void setView(QNativeViewController *view);
 
 private:
     friend class QQuickWebView;
     QNativeViewController *m_view;
+    QScopedPointer<QQuickViewChangeListener> m_changeListener;
 };
 
 QT_END_NAMESPACE
